--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
         <li class="cabecalho-lista-item">estudante</li> 
         </ul>
     </header>
+    <section class="escola">
+        <h2 class="escola-titulo">sobre a escola</h2>
+        <p class="escola-texto-um">O ensino da escola e bom comparado as outras
+        </p>
+        <p class="escola-texto-dois"></p>
+        <img class="escola-imagem" src="Formula-bro.png" alt="professora no quadro.">
+    </section>
 </body>
+
 </html>
