--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
         </ul>
     </header>
     <section class="escola">
-        <h2 class="escola-titulo">sobre a escola</h2>
-        <p class="escola-texto-um">O ensino da escola e bom comparado as outras
-        </p>
-        <p class="escola-texto-dois"></p>
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">sobre a escola</h2>
+            <p class="escola-texto-um">O ensino da escola e bom comparado as outras
+            </p>
+            <p class="escola-texto-dois"></p>
+                
+        </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="professora no quadro.">
     </section>
 </body>
