--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="professora no quadro.">
     </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">quem são nossos estudantes</h2>
+    <img src="" alt="">
+
+    
+    </section>
 </body>
 
 </html>
