--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header clas="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="Captura de tela_2024-08-30_19-27-02.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
         <li class="cabecalho-lista-item">escola</li>
         <li class="cabecalho-lista-item">estudante</li> 
@@ -26,8 +26,8 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">quem são nossos estudantes</h2>
-    <img src="" alt="">
-
+        <img class="img2" src="download.png" alt="">
+        <img class="img3" src="download.png" alt="">
     
     </section>
 </body>
